--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,6 +1,6 @@
 .nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   height: 70px;
 }
